--- a/app/launch/package.json
+++ b/app/launch/package.json
@@ -21,8 +21,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "start:local": "export export REACT_APP_VERSION_FEED='http://localhost:3000/grails-version-feed.json'; npm run start",
-        "build": "react-scripts build",
+        "start:local": "export  NODE_OPTIONS=\"--openssl-legacy-provider\"; export REACT_APP_VERSION_FEED='http://localhost:3000/grails-version-feed.json'; npm run start --legacy-peer-deps",
+        "build": "react-scripts --openssl-legacy-provider build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
