Update start URL

--- a/app/launch/package.json
+++ b/app/launch/package.json
@@ -2,7 +2,7 @@
     "name": "app",
     "version": "0.1.1",
     "private": true,
-    "homepage": "https://start.grails.org",
+    "homepage": "https://grails.github.io/grails-forge-ui/",
     "dependencies": {
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
