--- a/build.gradle
+++ b/build.gradle
@@ -5,25 +5,12 @@ plugins {
 
 node {
     nodeModulesDir = file("${rootProject.projectDir}/app/launch")
-
-    // Version of node to use.
-    version = '20.2.0'
-
-    // Version of npm to use.
-    npmVersion = '7.0.7'
-    download = true
 }
 
 task buildStarter(type: NpmTask) {
     dependsOn npmInstall
     workingDir = file("${rootProject.projectDir}/app/launch")
-    args = ['config', 'set', 'script-shell', '/usr/bin/bash', 'run', 'build']
-}
-
-
-task run(type: NpmTask, dependsOn: buildStarter) {
-  description = "Build Project run"
-args = ["run", "start:local"]
+    args = ['run', 'build']
 }
 
 npmInstall.configure {
